--- a/src/NKZSoft.Template.Presentation.GRPC/NKZSoft.Template.Presentation.GRPC.csproj
+++ b/src/NKZSoft.Template.Presentation.GRPC/NKZSoft.Template.Presentation.GRPC.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
       <Version>1.0.4</Version>
+      <AssemblyName>NKZSoft.Template.Presentation.Grpc</AssemblyName>
+      <RootNamespace>NKZSoft.Template.Presentation.Grpc</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
