--- a/tests/NKZSoft.Template.Presentation.REST.Tests/NKZSoft.Template.Presentation.REST.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.REST.Tests/NKZSoft.Template.Presentation.REST.Tests.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <PropertyGroup>
+      <AssemblyName>NKZSoft.Template.Presentation.Rest.Tests</AssemblyName>
+      <RootNamespace>NKZSoft.Template.Presentation.Rest.Tests</RootNamespace>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="RestSharp" />
