Adding validation to Postgres and Redis configurations

--- a/.github/workflows/build-by-branch.yaml
+++ b/.github/workflows/build-by-branch.yaml
@@ -62,14 +62,14 @@ jobs:
           indicators: true
           output: both
           thresholds: '30 40'
-      - name: Add Coverage PR Comment
-        uses: marocchino/sticky-pull-request-comment@v2
-        if: github.event_name == 'pull_request'
-        with:
-          recreate: true
-          path: code-coverage-results.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Add Coverage PR Comment
+#        uses: marocchino/sticky-pull-request-comment@v2
+#        if: github.event_name == 'pull_request'
+#        with:
+#          recreate: true
+#          path: code-coverage-results.md
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #      - name: Create badge
 #        uses: schneegans/dynamic-badges-action@v1.6.0
 #        with:
