--- a/src/NKZSoft.Template.EFCore.Caching.Redis/NKZSoft.Template.EFCore.Caching.Redis.csproj
+++ b/src/NKZSoft.Template.EFCore.Caching.Redis/NKZSoft.Template.EFCore.Caching.Redis.csproj
@@ -4,9 +4,12 @@
       <PackageReference Include="AspNetCore.HealthChecks.Redis" />
       <PackageReference Include="EasyCaching.CSRedis" />
       <PackageReference Include="EFCoreSecondLevelCacheInterceptor" />
+      <PackageReference Include="FluentValidation" />
+      <PackageReference Include="FluentValidation.AspNetCore" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
       <PackageReference Include="EasyCaching.Serialization.Json" />
+      <PackageReference Include="NKZSoft.FluentValidation.Options" />
     </ItemGroup>
   
     <ItemGroup>
