--- a/src/NKZSoft.Template.Presentation.GraphQL/NKZSoft.Template.Presentation.GraphQL.csproj
+++ b/src/NKZSoft.Template.Presentation.GraphQL/NKZSoft.Template.Presentation.GraphQL.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="HotChocolate.AspNetCore" />
       <PackageReference Include="HotChocolate.Data" />
       <PackageReference Include="HotChocolate.Data.EntityFramework" />
+      <PackageReference Include="HotChocolate.Diagnostics" />
     </ItemGroup>
 
     <ItemGroup>
