--- a/src/NKZSoft.Template.Presentation.Grpc/NKZSoft.Template.Presentation.Grpc.csproj
+++ b/src/NKZSoft.Template.Presentation.Grpc/NKZSoft.Template.Presentation.Grpc.csproj
@@ -12,12 +12,17 @@
 
     <ItemGroup>
       <PackageReference Include="Google.Protobuf" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" />
       <PackageReference Include="protobuf-net" />
       <PackageReference Include="protobuf-net.Grpc.AspNetCore" />
       <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" />
       <PackageReference Include="protobuf-net.Reflection" />
       <PackageReference Include="System.ServiceModel.Primitives" />
       <PackageReference Include="NKZSoft.Service.Configuration.Grpc" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageVersion Update="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc9.11" />
     </ItemGroup>
 
 </Project>
