--- a/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
+++ b/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Verbose",
+      "Default": "Debug",
       "Override": {
-        "System.Net.Http": "Verbose"
+        "System.Net.Http": "Debug"
       }
     },
     "EnableDbLogging": true
