Add high-performance logging with LoggerMessage

--- a/src/NKZSoft.Template.Common/NKZSoft.Template.Common.csproj
+++ b/src/NKZSoft.Template.Common/NKZSoft.Template.Common.csproj
@@ -3,5 +3,11 @@
     <ItemGroup>
       <PackageReference Include="Ardalis.GuardClauses" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <InternalsVisibleTo Include="NKZSoft.Template.MessageBrokers.RabbitMq" />
+      <InternalsVisibleTo Include="NKZSoft.Template.Application" />
     </ItemGroup>
 </Project>
