--- a/src/NKZSoft.Template.Presentation.SignalR/NKZSoft.Template.Presentation.SignalR.csproj
+++ b/src/NKZSoft.Template.Presentation.SignalR/NKZSoft.Template.Presentation.SignalR.csproj
@@ -16,4 +16,8 @@
       <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="NKZSoft.Template.Application" />
+  </ItemGroup>
+
 </Project>
