--- a/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
+++ b/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
@@ -29,6 +29,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <InternalsVisibleTo Include="NKZSoft.Template.Application" />
 <!--#if (EnableGraphQL)-->
       <InternalsVisibleTo Include="NKZSoft.Template.Presentation.GraphQL.Tests" />
 <!--#endif-->
