--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,6 +8,7 @@
     <PackageVersion Include="FluentValidation" Version="11.4.0" />
     <PackageVersion Include="HotChocolate.Abstractions" Version="12.16.0" />
     <PackageVersion Include="HotChocolate.Diagnostics" Version="12.16.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageVersion Include="NKZSoft.FluentValidation.Options" Version="1.0.1" />
     <PackageVersion Include="Npgsql.OpenTelemetry" Version="7.0.1" />
     <PackageVersion Include="OpenTelemetry" Version="1.4.0-rc.3" />
