--- a/src/NKZSoft.Template.Presentation.Grpc/NKZSoft.Template.Presentation.Grpc.csproj
+++ b/src/NKZSoft.Template.Presentation.Grpc/NKZSoft.Template.Presentation.Grpc.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Google.Protobuf" />
+      <PackageReference Include="OpenTelemetry" />
       <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" />
       <PackageReference Include="protobuf-net" />
       <PackageReference Include="protobuf-net.Grpc.AspNetCore" />
