--- a/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
+++ b/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
@@ -29,8 +29,12 @@
       "ConnectionString": "rabbitmq://rabbitmq:rabbitmq@localhost:5672",
       "HealthCheckEnabled" : true
     },
+    "RedisCacheConnection": {
+      "ConnectionString": "localhost,ssl=False,abortConnect=False,defaultDatabase=0",
+      "HealthCheckEnabled" : true
+    },
     "RedisConnection": {
-      "ConnectionString": "localhost,ssl=False,abortConnect=False",
+      "ConnectionString": "localhost,ssl=False,abortConnect=False,defaultDatabase=1",
       "HealthCheckEnabled" : true
     }
   },
