--- a/src/NKZSoft.Template.Presentation.Starter/appsettings.Docker.json
+++ b/src/NKZSoft.Template.Presentation.Starter/appsettings.Docker.json
@@ -28,9 +28,13 @@
       "ConnectionString": "rabbitmq://rabbitmq:rabbitmq@rabbitmq:5672",
       "HealthCheckEnabled" : false
     },
+    "RedisCacheConnection": {
+      "ConnectionString": "localhost,ssl=False,abortConnect=False,defaultDatabase=0",
+      "HealthCheckEnabled" : true
+    },
     "RedisConnection": {
-      "ConnectionString": "localhost,ssl=False,abortConnect=False",
-      "HealthCheckEnabled" : false
+      "ConnectionString": "localhost,ssl=False,abortConnect=False,defaultDatabase=1",
+      "HealthCheckEnabled" : true
     }
   },
   "Services": {
