--- a/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
+++ b/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <Version>1.11.0</Version>
+        <Version>1.12.0</Version>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\NKZSoft.Template.Presentation.Rest\NKZSoft.Template.Presentation.Rest.csproj" />
+<!--#if (EnableRedisStorage)-->
+      <ProjectReference Include="..\NKZSoft.Template.Persistence.Redis\NKZSoft.Template.Persistence.Redis.csproj" />
+<!--#endif-->
 <!--#if (EnableGraphQL)-->
       <ProjectReference Include="..\NKZSoft.Template.Presentation.GraphQL\NKZSoft.Template.Presentation.GraphQL.csproj" />
 <!--#endif-->
