--- a/src/NKZSoft.Template.Application/NKZSoft.Template.Application.csproj
+++ b/src/NKZSoft.Template.Application/NKZSoft.Template.Application.csproj
@@ -7,6 +7,7 @@
         <PackageReference Include="Mapster" />
         <PackageReference Include="Mapster.Async" />
         <PackageReference Include="Mapster.DependencyInjection" />
+        <PackageReference Include="MediatR" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" />
         <PackageReference Update="Microsoft.SourceLink.GitHub" />
@@ -17,9 +18,9 @@
       <ProjectReference Include="..\NKZSoft.Template.Domain\NKZSoft.Template.Domain.csproj" />
       <ProjectReference Include="..\NKZSoft.Template.MessageBrokers.RabbitMq\NKZSoft.Template.MessageBrokers.RabbitMq.csproj" />
     </ItemGroup>
-  
+
     <Target Name="CleanGenerated">
         <Delete Files="@(Generated)" />
     </Target>
-  
+
 </Project>
