--- a/src/NKZSoft.Template.Presentation.Starter/appsettings.Docker.json
+++ b/src/NKZSoft.Template.Presentation.Starter/appsettings.Docker.json
@@ -10,17 +10,17 @@
   "Kestrel": {
     "endpoints": {
       "http": {
-        "url": "http://0.0.0.0:5055"
+        "url": "http://0.0.0.0:8080"
       },
       "http2": {
         "Protocols": "Http2",
-        "url": "http://0.0.0.0:5056"
+        "url": "http://0.0.0.0:8081"
       }
     }
   },
   "ConnectionStrings": {
     "PostgresConnection": {
-      "ConnectionString": "Host=localhost;Port=5432;Uid=postgres;Password=postgres;Database=template_db;",
+      "ConnectionString": "Host=postgres;Port=5432;Uid=postgres;Password=postgres;Database=template_db;",
       "HealthCheckEnabled" : false,
       "LoggingEnabled": false
     },
@@ -29,11 +29,11 @@
       "HealthCheckEnabled" : false
     },
     "RedisCacheConnection": {
-      "ConnectionString": "localhost,ssl=False,abortConnect=False,defaultDatabase=0",
+      "ConnectionString": "redis,ssl=False,abortConnect=False,defaultDatabase=0",
       "HealthCheckEnabled" : true
     },
     "RedisConnection": {
-      "ConnectionString": "localhost,ssl=False,abortConnect=False,defaultDatabase=1",
+      "ConnectionString": "redis,ssl=False,abortConnect=False,defaultDatabase=1",
       "HealthCheckEnabled" : true
     }
   },
@@ -42,7 +42,7 @@
   },
   "Cors": [
     "http://localhost:9000",
-    "http://localhost:5055"
+    "http://localhost:8080"
   ],
   "Swagger":{
      "Enabled": true,
