--- a/src/NKZSoft.Template.EFCore.Caching.Redis/NKZSoft.Template.EFCore.Caching.Redis.csproj
+++ b/src/NKZSoft.Template.EFCore.Caching.Redis/NKZSoft.Template.EFCore.Caching.Redis.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
       <PackageReference Include="NKZSoft.FluentValidation.Options" />
+      <PackageReference Include="StackExchange.Redis" />
     </ItemGroup>
 
     <ItemGroup>
